# advent-of-code

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  conanbuildinfo.cmake  conanbuildinfo.txt  conanfile.txt  conaninfo.txt  graph_info.json  launch.vs.json
.github/workflows/: build.yaml
app/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/core/: CMakeLists.txt
lib/year2015/: CMakeLists.txt
lib/year2016/: CMakeLists.txt
lib/year2017/: CMakeLists.txt
lib/year2018/: CMakeLists.txt
lib/year2019/: CMakeLists.txt
lib/year2020/: CMakeLists.txt
lib/year2020/include/: Puzzles2020.hpp
lib/year2020/include/2020/: Day01Puzzle.hpp  Day02Puzzle.hpp  Day03Puzzle.hpp  Day04Puzzle.hpp  Day05Puzzle.hpp  Day06Puzzle.hpp  Day07Puzzle.hpp  Day08Puzzle.hpp  Day09Puzzle.hpp  Day10Puzzle.hpp  Day11Puzzle.hpp  Day12Puzzle.hpp  Day13Puzzle.hpp  Day14Puzzle.hpp  Day15Puzzle.hpp  Day16Puzzle.hpp  Day17Puzzle.hpp  Day18Puzzle.hpp  Day19Puzzle.hpp  Day20Puzzle.hpp  Day21Puzzle.hpp  Day22Puzzle.hpp  Day23Puzzle.hpp  Day24Puzzle.hpp  Day25Puzzle.hpp  HandheldConsole.hpp
lib/year2020/src/: Day01Puzzle.cpp  Day02Puzzle.cpp  Day03Puzzle.cpp  Day04Puzzle.cpp  Day05Puzzle.cpp  Day06Puzzle.cpp  Day07Puzzle.cpp  Day08Puzzle.cpp  Day09Puzzle.cpp  Day10Puzzle.cpp  Day11Puzzle.cpp  Day12Puzzle.cpp  Day13Puzzle.cpp  Day14Puzzle.cpp  Day15Puzzle.cpp  Day16Puzzle.cpp  Day17Puzzle.cpp  Day18Puzzle.cpp  Day19Puzzle.cpp  Day20Puzzle.cpp  Day21Puzzle.cpp  Day22Puzzle.cpp  Day23Puzzle.cpp  Day24Puzzle.cpp  Day25Puzzle.cpp  HandheldConsole.cpp
lib/year2021/: CMakeLists.txt
lib/year2022/: CMakeLists.txt
lib/year2023/: CMakeLists.txt
mark.davison.advent.of.code/: mark.davison.advent.of.code.sln
mark.davison.advent.of.code/mark.davison.advent.of.code.TwentyTwentyFour/: Day01.cs  Day02.cs  Day03.cs  Day04.cs  Day1.cs  GlobalUsings.cs  mark.davison.advent.of.code.TwentyTwentyFour.csproj
mark.davison.advent.of.code/mark.davison.advent.of.code.TwentyTwentyFour.test/: Day01Tests.cs  Day02Tests.cs  Day03Tests.cs  Day04Tests.cs  mark.davison.advent.of.code.TwentyTwentyFour.test.csproj
mark.davison.advent.of.code/mark.davison.advent.of.code.console/: GlobalUsings.cs  Program.cs  mark.davison.advent.of.code.console.csproj
mark.davison.advent.of.code/mark.davison.advent.of.code.framework/: DayAttribute.cs  DaySolverBase.cs  IDaySolver.cs  PuzzleRegistration.cs
scripts/: build_and_test.ps1  generateSkeleton.py
src/: main.cpp
test/: CMakeLists.txt
test/2015/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2016/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2017/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2018/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2019/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  Day19PuzzleTests.cpp  Day20PuzzleTests.cpp  Day21PuzzleTests.cpp  Day22PuzzleTests.cpp  Day23PuzzleTests.cpp  Day24PuzzleTests.cpp  Day25PuzzleTests.cpp
test/2020/: CMakeLists.txt  Day01PuzzleTests.cpp  Day02PuzzleTests.cpp  Day03PuzzleTests.cpp  Day04PuzzleTests.cpp  Day05PuzzleTests.cpp  Day06PuzzleTests.cpp  Day07PuzzleTests.cpp  Day08PuzzleTests.cpp  Day09PuzzleTests.cpp  Day10PuzzleTests.cpp  Day11PuzzleTests.cpp  Day12PuzzleTests.cpp  Day13PuzzleTests.cpp  Day14PuzzleTests.cpp  Day15PuzzleTests.cpp  Day16PuzzleTests.cpp  Day17PuzzleTests.cpp  Day18PuzzleTests.cpp  (+7 more)
testbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AdventOfCode.sln  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
(+911 files in other folders)
