CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

CMAKE_POLICY(SET CMP0074 NEW)
if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.19)
  CMAKE_POLICY(SET CMP0110 NEW)
endif()

set(CMAKE_DEBUG_POSTFIX "-d")

PROJECT(AdventOfCode 
	VERSION 1
	LANGUAGES CXX)
SET(AOC_CXX_STANDARD 20)
	
SET(CMAKE_CXX_STANDARD ${AOC_CXX_STANDARD})
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(PROJECT_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

SET(ADVENT_OF_CODE_CONAN_LIBS

)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(app)
ENABLE_TESTING()
ADD_SUBDIRECTORY(test)