SET(MODULE_NAME "Year2020")
STRING(TOLOWER ${MODULE_NAME} MODULE_NAME_LOWER)
SET(LIB_NAME "advent-of-code-${MODULE_NAME_LOWER}${LIBRARY_EXTENSION}")

SET(LIBRARY_MODULE_PATH "${PROJECT_SOURCE_DIR}/lib/${MODULE_NAME_LOWER}")
SET(LIBRARY_SRC_PATH "${LIBRARY_MODULE_PATH}/src" )
SET(LIBRARY_INCLUDE_PATH "${LIBRARY_MODULE_PATH}/include")

FILE(GLOB_RECURSE LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/${MODULE_NAME}/*.hpp")
FILE(GLOB_RECURSE LIB_INLINE_FILES "${LIBRARY_INCLUDE_PATH}/${MODULE_NAME}/*.inl")
FILE(GLOB_RECURSE LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

SET(LIB_HEADER_FILES ${LIB_HEADER_FILES} ${LIB_INLINE_FILES})

ADD_LIBRARY(${LIB_NAME} ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})
TARGET_INCLUDE_DIRECTORIES(${LIB_NAME} PUBLIC ${LIBRARY_INCLUDE_PATH})
TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC advent-of-code-core)
TARGET_LINK_LIBRARIES(${LIB_NAME} PUBLIC ${ADVENT_OF_CODE_CONAN_LIBS})
