SET(MODULE_NAME "Year2019")
STRING(TOLOWER ${MODULE_NAME} MODULE_NAME_LOWER)
SET(EXE_NAME "advent-of-code-${MODULE_NAME_LOWER}-test")
SET(LIB_NAME "advent-of-code-${MODULE_NAME_LOWER}")

FILE(GLOB_RECURSE LIB_TEST_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")

find_package (Threads REQUIRED)

ADD_EXECUTABLE(${EXE_NAME} "main.cpp" ${LIB_TEST_FILES})
TARGET_LINK_LIBRARIES(${EXE_NAME} PUBLIC advent-of-code-core)
TARGET_LINK_LIBRARIES(${EXE_NAME} PUBLIC "advent-of-code-${MODULE_NAME_LOWER}")
TARGET_LINK_LIBRARIES(${EXE_NAME} PUBLIC ${CONAN_LIBS})
target_link_libraries(${EXE_NAME} PUBLIC Threads::Threads)
TARGET_INCLUDE_DIRECTORIES(${EXE_NAME} PUBLIC "${PROJECT_SOURCE_DIR}/thirdparty/catch/include")
SET_PROPERTY(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET ${EXE_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)

ParseAndAddCatchTests(${EXE_NAME})
